--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@ionic/storage": "^2.1.3",
     "@ionic/storage-angular": "^3.0.6",
     "bn-ng-idle": "^1.0.1",
+    "bootstrap": "^5.1.3",
     "jwt-decode": "^3.1.2",
     "npm": "^8.1.2",
     "rxjs": "~6.6.0",
