--- a/package.json
+++ b/package.json
@@ -13,23 +13,30 @@
   },
   "private": true,
   "dependencies": {
+    "@agm/core": "^3.0.0-beta.0",
     "@angular/common": "~12.1.1",
     "@angular/core": "~12.1.1",
     "@angular/flex-layout": "^2.0.0-beta.10-4905443",
     "@angular/forms": "~12.1.1",
+    "@angular/google-maps": "^13.0.0",
     "@angular/platform-browser": "~12.1.1",
     "@angular/platform-browser-dynamic": "~12.1.1",
     "@angular/pwa": "^12.2.12",
     "@angular/router": "~12.1.1",
     "@angular/service-worker": "^12.2.12",
+    "@capacitor-community/capacitor-googlemaps-native": "^1.1.5",
     "@capacitor/app": "1.0.5",
+    "@capacitor/browser": "1.0.6",
     "@capacitor/camera": "^1.1.2",
     "@capacitor/core": "3.2.5",
     "@capacitor/filesystem": "^1.0.5",
+    "@capacitor/geolocation": "^1.1.3",
     "@capacitor/haptics": "1.1.2",
     "@capacitor/keyboard": "1.1.2",
     "@capacitor/status-bar": "1.0.5",
     "@capacitor/storage": "^1.2.2",
+    "@ionic-native/geolocation": "^5.36.0",
+    "@ionic-native/google-maps": "^5.5.0",
     "@ionic-native/splash-screen": "^5.36.0",
     "@ionic-native/status-bar": "^5.36.0",
     "@ionic/angular": "^5.5.2",
@@ -56,6 +63,7 @@
     "@angular/language-service": "~12.0.1",
     "@capacitor/cli": "3.2.5",
     "@ionic/angular-toolkit": "^4.0.0",
+    "@types/googlemaps": "^3.43.3",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
