--- a/package.json
+++ b/package.json
@@ -45,10 +45,12 @@
     "@ionic/storage-angular": "^3.0.6",
     "bn-ng-idle": "^1.0.1",
     "bootstrap": "^5.1.3",
+    "file-saver": "^2.0.5",
     "jwt-decode": "^3.1.2",
     "npm": "^8.1.2",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
+    "xlsx": "^0.17.4",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
