--- a/package.json
+++ b/package.json
@@ -43,6 +43,9 @@
     "@ionic/pwa-elements": "^3.0.2",
     "@ionic/storage": "^2.1.3",
     "@ionic/storage-angular": "^3.0.6",
+    "@types/google-maps": "^3.2.3",
+    "angular-paystack": "^1.0.0",
+    "angular4-paystack": "^3.0.2",
     "bn-ng-idle": "^1.0.1",
     "bootstrap": "^5.1.3",
     "file-saver": "^2.0.5",
